--- a/Develop/package.json
+++ b/Develop/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "badge-maker": "^3.0.0-rc1",
+    "camelcase": "^6.0.0",
     "dotenv": "^8.0.0",
     "inquirer": "^6.3.1"
   }
